--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "orm",
     "cls-hooked",
     "transaction",
+    "isolation",
     "decorator"
   ],
   "license": "MIT",
@@ -41,12 +42,13 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "typedoc": "^0.12.0",
-    "typeorm": "^0.2.7",
+    "typeorm": "^0.2.8",
     "typescript": "^3.0.3"
   },
   "peerDependencies": {
     "cls-hooked": ">= 4.2.2",
     "reflect-metadata": ">= 0.1.12",
-    "typeorm": ">= 0.2.7"
+    "typeorm": ">= 0.2.8"
   }
 }
+
