--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.6",
   "description": "A Transactional Method Decorator for typeorm that uses cls-hooked to handle and propagate transactions between different repositories and service methods. Inpired by Spring Trasnactional Annotation and Sequelize CLS",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": {
     "name": "Ohad David",
     "email": "ohad.david@gmail.com"
