chore: add repo url to package.json (#46)
This will tools like dependabot will be able to pick up the changelog.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "readmeFilename": "README.md",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/odavid/typeorm-transactional-cls-hooked"
   },
   "tags": [
     "typescript",
