--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "target": "es5",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "test/**/*.ts", "dist", "temp"]
