--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "clean": "rm -rf ./dist",
     "build": "npm run clean && tsc",
     "typedoc": "typedoc --out ./docs src/**.ts",
-    "setup-test-db": "docker-compose -f tests/docker-compose.yaml up -d && sleep 3",
+    "setup-test-db": "npm run teardown-test-db; docker-compose -f tests/docker-compose.yaml up -d && sleep 3",
     "teardown-test-db": "docker-compose -f tests/docker-compose.yaml down --remove-orphans -v",
     "test": "npm run setup-test-db && jest"
   },
@@ -41,11 +41,16 @@
     "cls-hooked": "^4.2.2"
   },
   "devDependencies": {
+    "@nestjs/common": "^7.5.5",
+    "@nestjs/core": "^7.5.5",
+    "@nestjs/testing": "^7.5.5",
+    "@nestjs/typeorm": "^7.1.5",
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
     "pg": "^8.5.1",
     "prettier": "^1.14.3",
     "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.6.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.7.0",
     "tslint": "^6.1.0",
