--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/testing": "^7.5.5",
     "@nestjs/typeorm": "^7.1.5",
     "@types/jest": "^26.0.15",
+    "delay": "^5.0.0",
     "jest": "^26.6.3",
     "pg": "^8.5.1",
     "prettier": "^1.14.3",
