--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typeorm-transactional",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A Transactional Method Decorator for typeorm that uses cls-hooked to handle and propagate transactions between different repositories and service methods. Inpired by Spring Trasnactional Annotation and Sequelize CLS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,7 +13,7 @@
     "email": "ohad.david@gmail.com"
   },
   "readmeFilename": "README.md",
-  "tags": [
+  "keywords": [
     "typescript",
     "typescript-orm",
     "typeorm",
@@ -42,9 +42,16 @@
     "cls-hooked": "^4.2.2"
   },
   "devDependencies": {
+    "@nestjs/common": "^9.0.7",
+    "@nestjs/core": "^9.0.7",
+    "@nestjs/testing": "^9.0.7",
+    "@nestjs/typeorm": "^9.0.0",
     "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "jest": "^28.1.3",
     "pg": "^8.7.3",
+    "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^28.0.7",
     "typeorm": "^0.3.7",
@@ -52,8 +59,7 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0"
+    "rxjs": "^7.5.6"
   },
   "peerDependencies": {
     "reflect-metadata": ">= 0.1.12",
