--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@nestjs/common": "^9.0.7",
     "@nestjs/core": "^9.0.7",
     "@nestjs/testing": "^9.0.7",
-    "@nestjs/typeorm": "^9.0.0",
+    "@steroidsjs/nest-typeorm": "^10.0.3",
+    "@steroidsjs/typeorm": "^0.3.23",
     "@types/jest": "^28.1.6",
     "@types/semver": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -60,12 +61,11 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.6",
     "ts-jest": "^28.0.7",
-    "typeorm": "^0.3.10",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "reflect-metadata": ">= 0.1.12",
-    "typeorm": ">= 0.2.8"
+    "@steroidsjs/typeorm": ">= 0.2.8"
   },
   "engines": {
     "node": ">=12.0.0"
